5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1753_3096.log
== TEST (2019-05-16 19:29:48) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
elif(p==1):
	pt=20
elif(p==2):
	pt=15
elif(p==3):
	pt=10
elif(p==4):
	pt=7
elif(p==5):
	pt=6
elif(p==6):
	pt=5
elif(p==7):
	pt=4
elif(p==8):
	pt=3
elif(p==9):
	pt=2
elif(p==10):
	pt=1
	
-- ERROR:
File "XXXX", line 3
    elif(p==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:14) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10)
elif(p==1):
	pt=20
elif(p==2):
	pt=15
elif(p==3):
	pt=10
elif(p==4):
	pt=7
elif(p==5):
	pt=6
elif(p==6):
	pt=5
elif(p==7):
	pt=4
elif(p==8):
	pt=3
elif(p==9):
	pt=2
elif(p==10):
	pt=1
	
-- ERROR:
File "XXXX", line 3
    while(p!=0 and p<=10)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:22) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
elif(p==1):
	pt=20
elif(p==2):
	pt=15
elif(p==3):
	pt=10
elif(p==4):
	pt=7
elif(p==5):
	pt=6
elif(p==6):
	pt=5
elif(p==7):
	pt=4
elif(p==8):
	pt=3
elif(p==9):
	pt=2
elif(p==10):
	pt=1
	
-- ERROR:
File "XXXX", line 4
    elif(p==1):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:34) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
	elif(p==1):
		pt=20
elif(p==2):
	pt=15
elif(p==3):
	pt=10
elif(p==4):
	pt=7
elif(p==5):
	pt=6
elif(p==6):
	pt=5
elif(p==7):
	pt=4
elif(p==8):
	pt=3
elif(p==9):
	pt=2
elif(p==10):
	pt=1
	
-- ERROR:
File "XXXX", line 4
    elif(p==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:44) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
	if(p==1):
		pt=20
elif(p==2):
	pt=15
elif(p==3):
	pt=10
elif(p==4):
	pt=7
elif(p==5):
	pt=6
elif(p==6):
	pt=5
elif(p==7):
	pt=4
elif(p==8):
	pt=3
elif(p==9):
	pt=2
elif(p==10):
	pt=1
	
-- ERROR:
File "XXXX", line 6
    elif(p==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:31:55) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
elif(p==3):
	pt=10
elif(p==4):
	pt=7
elif(p==5):
	pt=6
elif(p==6):
	pt=5
elif(p==7):
	pt=4
elif(p==8):
	pt=3
elif(p==9):
	pt=2
elif(p==10):
	pt=1
	
-- ERROR:
File "XXXX", line 8
    elif(p==3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:32:22) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
	
-- ERROR:
File "XXXX", line 8
    elif(p==3):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:33:58) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
	pt=pt+pt
	print(pt)
-- OUTPUT:
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:34:42) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
	pt=pt+pt
print(pt)
-- OUTPUT:
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:40) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
		pt=pt+pt
		p=int(input("posicao na corrida: "))
print(pt)
-- OUTPUT:
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
40
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:54) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0 and p<=10):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
		pt=pt+pt
	p=int(input("posicao na corrida: "))
print(pt)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:01) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
		pt=pt+pt
	p=int(input("posicao na corrida: "))
print(pt)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:38:37) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
	p=int(input("posicao na corrida: "))
	pt=pt+pt
print(pt)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:26) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
	p=int(input("posicao na corrida: "))
	pt=pt+pt
print(pt)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:22) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
	p=int(input("posicao na corrida: "))
	pt=pt+pt
print(pt)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:42:44) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=20
	elif(p==2):
		pt=15
	elif(p==3):
		pt=10
	elif(p==4):
		pt=7
	elif(p==5):
		pt=6
	elif(p==6):
		pt=5
	elif(p==7):
		pt=4
	elif(p==8):
		pt=3
	elif(p==9):
		pt=2
	elif(p==10):
		pt=1
	pt=pt+pt
	p=int(input("posicao na corrida: "))
	print(pt)
-- OUTPUT:
40
30
20
14
12
10
8
6
4
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:45:16) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=pt+20
	elif(p==2):
		pt=pt+15
	elif(p==3):
		pt=pt+10
	elif(p==4):
		pt=pt+7
	elif(p==5):
		pt=pt+6
	elif(p==6):
		pt=pt+5
	elif(p==7):
		pt=pt+4
	elif(p==8):
		pt=pt+3
	elif(p==9):
		pt=pt+2
	elif(p==10):
		pt=pt+1
		p=int(input("posicao na corrida: "))
		pt=pt+pt
	print(pt)
-- OUTPUT:
20
40
60
80
100
120
140
160
180
200
220
240
260
280
300
320
340
360
380
400
420
440
460
480
500
520
540
560
580
600
620
640
660
680
700
720
740
760
780
800
820
840
860
880
900
920
940
960
980
1000
1020
1040
1060
1080
1100
1120
1140
1160
1180
1200
1220
1240
1260
1280
1300
1320
1340
1360
1380
1400
1420
1440
1460
1480
1500
1520
1540
1560
1580
1600
1620
1640
1660
1680
1700
1720
1740
1760
1780
1800
1820
1840
1860
1880
1900
1920
1940
1960
1980
2000
2020
2040
2060
2080
2100
2120
2140
2160
2180
2200
2220
2240
2260
2280
2300
2320
2340
2360
2380
2400
2420
2440
2460
2480
2500
2520
2540
2560
2580
2600
2620
2640
2660
2680
2700
2720
2740
2760
2780
2800
2820
2840
2860
2880
2900
2920
2940
2960
2980
3000
3020
3040
3060
3080
3100
3120
3140
3160
3180
3200
3220
3240
3260
3280
3300
3320
3340
3360
3380
3400
3420
3440
3460
3480
3500
3520
3540
3560
3580
3600
3620
3640
3660
3680
3700
3720
3740
3760
3780
3800
3820
3840
3860
3880
3900
3920
3940
3960
3980
4000
4020
4040
4060
4080
4100
4120
4140
4160
4180
4200
422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:45:47) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=pt+20
	elif(p==2):
		pt=pt+15
	elif(p==3):
		pt=pt+10
	elif(p==4):
		pt=pt+7
	elif(p==5):
		pt=pt+6
	elif(p==6):
		pt=pt+5
	elif(p==7):
		pt=pt+4
	elif(p==8):
		pt=pt+3
	elif(p==9):
		pt=pt+2
	elif(p==10):
		pt=pt+1
	p=int(input("posicao na corrida: "))
	pt=pt+pt
	print(pt)
-- OUTPUT:
40
110
240
494
1000
2010
4028
8062
16128
32258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:10) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=pt+20
	elif(p==2):
		pt=pt+15
	elif(p==3):
		pt=pt+10
	elif(p==4):
		pt=pt+7
	elif(p==5):
		pt=pt+6
	elif(p==6):
		pt=pt+5
	elif(p==7):
		pt=pt+4
	elif(p==8):
		pt=pt+3
	elif(p==9):
		pt=pt+2
	elif(p==10):
		pt=pt+1
	p=int(input("posicao na corrida: "))
pt=pt+pt
print(pt)
-- OUTPUT:
146
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:37) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=pt+20
	elif(p==2):
		pt=pt+15
	elif(p==3):
		pt=pt+10
	elif(p==4):
		pt=pt+7
	elif(p==5):
		pt=pt+6
	elif(p==6):
		pt=pt+5
	elif(p==7):
		pt=pt+4
	elif(p==8):
		pt=pt+3
	elif(p==9):
		pt=pt+2
	elif(p==10):
		pt=pt+1
	p=int(input("posicao na corrida: "))
pt=pt+pt
print(pt)
-- OUTPUT:
146
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:47:34) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=pt+20
	elif(p==2):
		pt=pt+15
	elif(p==3):
		pt=pt+10
	elif(p==4):
		pt=pt+7
	elif(p==5):
		pt=pt+6
	elif(p==6):
		pt=pt+5
	elif(p==7):
		pt=pt+4
	elif(p==8):
		pt=pt+3
	elif(p==9):
		pt=pt+2
	elif(p==10):
		pt=pt+1
	p=int(input("posicao na corrida: "))
pt=pt
print(pt)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:48:06) 
-- CODE:
p=int(input("posicao na corrida: "))
pt=0
while(p!=0):
	if(p==1):
		pt=pt+20
	elif(p==2):
		pt=pt+15
	elif(p==3):
		pt=pt+10
	elif(p==4):
		pt=pt+7
	elif(p==5):
		pt=pt+6
	elif(p==6):
		pt=pt+5
	elif(p==7):
		pt=pt+4
	elif(p==8):
		pt=pt+3
	elif(p==9):
		pt=pt+2
	elif(p==10):
		pt=pt+1
	p=int(input("posicao na corrida: "))
pt=pt
print(pt)
-- EXECUTION TIME:
0.223433
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
73
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
135
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
